Moving public files to folder 'public'.

--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,8 @@ tmp/
 #ignore confituration
 config/
 
-#ignore .git folder that I don't understand
-.git/
-
-#ignore .idea folder that I don't understand
-.idea/
-
 #ignore phpunit results cache
 .phpunit.result.cache
+
+#ignore local dev IIS server file
+public/web.config
